fix image alignments on caps redesign case study

--- a/src/components/Caps_Redesign/CapsMedia.scss
+++ b/src/components/Caps_Redesign/CapsMedia.scss
@@ -1,6 +1,8 @@
+
 .about {
     min-height: 100vh;
     position: relative;
+    padding-bottom: 10%;
 }
 
 .about .line-styling{
@@ -36,14 +38,33 @@
     height: fit-content;
 }
 
+.about-body2 {
+  display: flex;
+  flex-direction: row;
+  align-items: right;
+  justify-content: right;
+  padding-top: 8rem;
+  height: fit-content;
+  padding-right: 5%;
+}
+
 .about-description {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    flex: 0.5;
     width: 100%;
     height: fit-content;
+}
+
+.about-description2 {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: fit-content;
+  width:500px;
+  margin:0;
+  position: absolute;
+  right:0;
+  top:0;
 }
 
 .about-description >h2 {
@@ -61,32 +82,78 @@
 .about-img {
     margin-top: 40px;
     pointer-events: none;
+    width: auto;
 }
 
 .about-img > img {
     width: 380px;
     flex: 0.5;
+    border-radius: 10px;
 }
 
-.about-description > dd {
-  font-size: 2rem;
-  color: #e0d9d9;
-  font-family: var(--primaryFont);
-  padding: 1.5vh;
+.column-image {
+  display: flex;
 }
 
-.about-description > dl {
-  font-size: 1.25rem;
-  color: #e0d9d9;
-  font-family: var(--primaryFont);
-  padding: 3vh;
+
+
+
+.container {
+  width: 30rem;
+  margin: 20px auto;
+  display: grid;
+  grid-gap: 50px; //combines previous two lines if same
+  position: relative;
+
+    @media screen and (max-width: 425px){
+      width: 100%;
+    }
 }
 
-.about-description > ul {
-  font-size: 1.25rem;
-  color: #e0d9d9;
+.container2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 50px;
+
+    @media screen and (max-width: 425px){
+      width: 100%;
+    }
+}
+
+.item {
+  border-radius: 15px;
+  padding: 3rem;
+  font-size: 1.75rem;
+  text-align: center;
+  font-family: sans-serif;
+  color: #fff;
   font-family: var(--primaryFont);
-  padding: 3vh;
+  font-weight: bold;
+  letter-spacing: .1rem;
+  transition: 300ms ease-in-out;
+  height: 11rem;
+  
+  &--1 {
+    background-image: url('../../assets/png/links/Figma.jpg');
+
+  }
+  
+  &--1:hover  {
+    transform: scale(1.15)
+  }
+  
+  &--2 {
+    background-image: url('../../assets/png/links/Presentation.png');
+    color: #000;
+  }
+  
+  &--2:hover  {
+    transform: scale(1.15)
+  }
+  
+  &--3 {
+    background-color: blueviolet;
+  }
 }
 
 @media (min-width: 992px) and (max-width: 1380px) {
@@ -118,6 +185,15 @@
         justify-content: space-evenly;
     }
 
+    .about-body2 {
+      padding-top: 2rem;
+      display: grid;
+      flex-direction: column-reverse;
+      align-items: right;
+      justify-content: right;
+      padding-right: 2%;
+  }
+
     .about-description{
         flex: 0.6;
         box-sizing: border-box;
@@ -134,19 +210,6 @@
     .about-description > p {
         font-size: 1.1rem;
     }
-
-    .about-description > dd {
-      font-size: 1.25rem;
-      color: #e0d9d9;
-      font-family: var(--primaryFont);
-    }
-    
-    .about-description > dl {
-      font-size: 1.25rem;
-      color: #e0d9d9;
-      font-family: var(--primaryFont);
-    }
-
 
     .about-img > img {
         width: 250px;
